# gym-battle-royale

./: .gitignore  README.md  pyproject.toml
src/gym_battle_royale/: __init__.py  demo.py  env.py  rsl_rl_training.py  sb3_training.py  websocket_server.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: main.ts  styles.css
